--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
             <div class="info">
                 <span>SOBRE MI</span>
                 <h3>ㅤ^•ﻌ•^ฅ  Hola ˎˊ˗</h3>
-                <p>Mi nombre es Paulina vazquez Peraza, tengo 22 años y soy estudiante de la licenciatura de Diseño Gráfico en la Universidad de Sonora. Comencé a interesarme en el dibujo 
+                <p>Mi nombre es Paulina vazquez Peraza, tengo 22 años y soy egresada de la licenciatura de Diseño Gráfico en la Universidad de Sonora. Comencé a interesarme en el dibujo 
                 y pintura desde una edad temprana lo cual me adentro al mundo del arte y diseño de una forma natural hasta obtener los conocimientos de hoy en día. Disfruto mucho  el diseño 
                 grafico ya que esta disciplina me permite desarrollarme como una persona creativa,  intentar cosas nuevas dando lo mejor de mi,  siempre con la apertura de obtener nuevos 
                 conocimientos para brindar soluciones optimas a la hora de diseñar.</p>
