--- a/index.html
+++ b/index.html
@@ -187,9 +187,9 @@
                                 <div class="overlay"></div>
                                 <img src="img/portafolio12.jpg" alt="winter">
                                 <div class="info">
-                                    <h4>Winter, Armamenter </h4>
-                                    <p>Fan art de Winter - Aespa</p>
-                                    <a href="https://www.instagram.com/p/ChYZpm1prE-/" class="btn-ir">Ir a link</a>
+                                    <h4>Portafolio Ilustraciones</h4>
+                                    <p>Ilustraciones en diferentes tecnicas</p>
+                                    <a href="https://www.behance.net/gallery/233985285/Ilustraciones/" class="btn-ir">Ir a link</a>
                                 </div>
             </div>
         </section>
@@ -233,3 +233,4 @@
 </body>
 
 </html>
+
