--- a/index.html
+++ b/index.html
@@ -140,8 +140,8 @@
                     <div class="overlay"></div>
                     <img src="img/portafolio7.jpg" alt="dior">
                     <div class="info">
-                        <h4>Dior Beauty</h4>
-                        <p>Diseño de cartel publicitario</p>
+                        <h4>Portafolio 2022</h4>
+                        <p>Portafolio de trabajos realizados en 2022</p>
                         <a href="https://issuu.com/paulinavazquezp/docs/portafolio_paulina_vazquez_peraza" class="btn-ir">Ir a link</a>
                     </div>
                 </div>
@@ -233,4 +233,5 @@
 </body>
 
 </html>
+
 
