--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
                     <img src="img/portafolio7.jpg" alt="dior">
                     <div class="info">
                         <h4>Portafolio 2023</h4>
-                        <p>Portafolio de trabajos realizados en 2023</p>
+                        <p>Portafolio de trabajos 2023</p>
                         <a href="https://issuu.com/paulinavazquezp/docs/portafolio_paulina_vazquez_peraza" class="btn-ir">Ir a link</a>
                     </div>
                 </div>
@@ -178,9 +178,9 @@
                                 <div class="overlay"></div>
                                 <img src="img/portafolio11.jpg" alt="Yukari">
                                 <div class="info">
-                                    <h4>Yukari</h4>
-                                    <p>Fan art de Yukari - Paradise Kiss</p>
-                                    <a href="https://www.instagram.com/p/CaLdSS9JYq6/" class="btn-ir">Ir a link</a>
+                                    <h4>Portafolio 2021</h4>
+                                    <p>Portafolio de trabajos 2021</p>
+                                    <a href="https://www.behance.net/gallery/129064551/Portfolio-2021-Paulina-Vazquez-P" class="btn-ir">Ir a link</a>
                                 </div>
                             </div>
                             <div class="proyecto">
@@ -233,6 +233,7 @@
 </body>
 
 </html>
+
 
 
 
