--- a/index.html
+++ b/index.html
@@ -169,9 +169,9 @@
                                 <div class="overlay"></div>
                                 <img src="img/portafolio10.jpg" alt="flyerconejogato">
                                 <div class="info">
-                                    <h4>Trueque de libros y venta de patio</h4>
-                                    <p>Flyer para venta y trueque de patio</p>
-                                    <a href="https://www.instagram.com/p/CnXhztcPm7s/" class="btn-ir">Ir a link</a>
+                                    <h4>Portafolio 2023</h4>
+                                    <p>Portafolio de trabajos 2023</p>
+                                    <a href="https://issuu.com/paulinavazquezp/docs/portafolio_paulina_vazquez_peraza" class="btn-ir">Ir a link</a>
                                 </div>
                             </div>
                             <div class="proyecto">
@@ -233,6 +233,7 @@
 </body>
 
 </html>
+
 
 
 
