--- a/index.html
+++ b/index.html
@@ -149,9 +149,9 @@
                     <div class="overlay"></div>
                     <img src="img/portafolio8.jpg" alt="Yokooinspo">
                     <div class="info">
-                        <h4>Referentes</h4>
-                        <p>Diseño de cartel inspirado en el trabajo de Tadanori Yokoo</p>
-                        <a href="https://issuu.com/paulinavazquezp/docs/portafolio_paulina_vazquez_peraza" class="btn-ir">Ir a link</a>
+                        <h4>Campaña Oreo México</h4>
+                        <p>Campaña publicitaria ficticia</p>
+                        <a href="https://www.behance.net/gallery/209153535/Campana-Publicitaria-Oreo" class="btn-ir">Ir a link</a>
                     </div>
                 </div>
                 <div class="proyecto">
@@ -233,6 +233,7 @@
 </body>
 
 </html>
+
 
 
 
