--- a/index.html
+++ b/index.html
@@ -140,9 +140,9 @@
                     <div class="overlay"></div>
                     <img src="img/portafolio7.jpg" alt="dior">
                     <div class="info">
-                        <h4>Portafolio 2023</h4>
-                        <p>Portafolio de trabajos 2023</p>
-                        <a href="https://issuu.com/paulinavazquezp/docs/portafolio_paulina_vazquez_peraza" class="btn-ir">Ir a link</a>
+                        <h4>Social Media - Prisc depilación con cera</h4>
+                        <p>Diseño para Redes Sociales</p>
+                        <a href="https://www.behance.net/gallery/232807363/Social-Media-Prisc-depilacion-con-cera" class="btn-ir">Ir a link</a>
                     </div>
                 </div>
                 <div class="proyecto">
@@ -233,6 +233,7 @@
 </body>
 
 </html>
+
 
 
 
