--- a/index.html
+++ b/index.html
@@ -129,9 +129,9 @@
                     <div class="overlay"></div>
                     <img src="img/portafolio6.jpg" alt="cvanimado">
                     <div class="info">
-                        <h4>Curriculum Animado</h4>
-                        <p>CV animado sobre mis habilidades</p>
-                        <a href="https://www.behance.net/gallery/134721231/Curriculum-Animado" class="btn-ir">Ir a link</a>
+                        <h4>Savage Magazine</h4>
+                        <p>Diseño de revista de moda editorial</p>
+                        <a href="https://www.behance.net/gallery/222007265/Savage-Magazine" class="btn-ir">Ir a link</a>
                     </div>
                 </div>
             </div>
@@ -233,6 +233,7 @@
 </body>
 
 </html>
+
 
 
 
